--- a/front-end/ems-frontend/src/App.css
+++ b/front-end/ems-frontend/src/App.css
@@ -65,3 +65,13 @@
     color: white;
     border-radius: 25px;
 }
+
+.playbar {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    background-color: #202020;
+    text-align: center;
+    color: white;
+}
